Tests/Runtime2/Error/GoalFirst/.build/alwaysfails.pr
[
  {
    "name": "AlwaysFails",
    "description": "Build goal AlwaysFails into executable form.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "add 1 to %goalFirstAttempts%, write to %goalFirstAttempts%",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "math",
            "action": "add",
            "parameters": [
              {
                "name": "A",
                "value": 1,
                "type": "int"
              },
              {
                "name": "B",
                "value": "%goalFirstAttempts%",
                "type": "int"
              }
            ],
            "return": [
              {
                "name": "goalFirstAttempts",
                "value": null
              }
            ],
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      },
      {
        "index": 1,
        "text": "throw error \u0022always fails\u0022",
        "lineNumber": 3,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "error",
            "action": "throw",
            "parameters": [
              {
                "name": "Message",
                "value": "always fails",
                "type": "string"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/AlwaysFails.goal",
    "prPath": "/.build/alwaysfails.pr",
    "hash": "20452d6d06df8961ba441d4dc18fc37c2e6dd04b2658568f70fb8b95f341268d",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]